<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryQuilt</string>
    <string name="action_settings">Settings</string>

    <!--Create Story-->
    <string name="storyTitlePrompt">Story Title</string>
    <string name="languageFilter">Language Filter:</string>
    <string name="create">Create</string>
    <string name="starterText">Once upon a time...</string>
    <string name="historyLength">History length: default</string>
    <string name="submissionLength">Submission length: default</string>

    <!--MainActivity XML-->
    <string name = "activity_main_writing_title">Writing</string>
    <string name = "activity_main_reading_title">Reading</string>


    <!--SignIn Activity XML-->
    <string name = "activity_signin_readonly">Read Only Mode</string>


    <!--MainActivity Menu-->
    <string name = "create_story">Create</string>
    <string name = "join_story">Join</string>
    <string name = "search_story">Search</string>
    <string name = "gPlusSignOut">Sign Out</string>
    <string name = "gPlusSignIn">Sign in with Google</string>

    <!--Story View-->
    <string name = "activity_story_overWordLimit">Your message is over the word limit of: </string>
    <string name = "activity_story_twiceInARow">You cannot post twice in a row. Please wait for another post before posting again.</string>
    <string name = "leave_story">Leave</string>

</resources>

